# botfactory-runtime

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  HOW_TO_CREATE_BOTS.md  Makefile  README.md  SERVER.md  SPRINT_PLAN.md  TESTING_REPORT.md  alerts.yml  docker-compose.llm.yml  docker-compose.tgi.yml  docker-compose.yml  prometheus.yml  pyproject.toml  test_cache_reload.py  test_chaos_pg.sh  test_security_audit.py  tgi.env
artifacts/: VERIFICATION_SUMMARY.md  alert_simulation.json  api_performance_summary.txt  cache_reload_results.json  chaos_test_results.json  circuit_breaker_test.json  compose.yaml  dsl_combinations_results.json  images.txt  llm_stress_results.json  metrics.txt  security_audit_results.json
botfactory_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile
docs/: dsl-v1.md  events.md  llm_setup.md
examples/: broadcast_demo.json  calendar_widget_demo.json  enhanced_reply_template_demo.json  i18n_demo.json  i18n_keys_example.md  keyboard_demo.json  llm_enhanced_bot_demo.json  menu_demo.json  pagination_widget_demo.json  ratelimit_advanced_demo.json  ratelimit_policy_demo.json  spec_full_v2.json  wizard_v1_demo.json
migrations/: 0001_init.sql  0002_seed.sql  0003_booking.sql  0004_components.sql  0005_bot_components.sql  0006_bot_events.sql  0007_indexes.sql  0008_i18n_tables.sql  0009_broadcast_tables.sql  0010_bot_llm_settings.sql  0011_bot_daily_budget_limit.sql  0011_bot_events_result_tag.sql  0012_bookings_table.sql
runtime/: actions.py  broadcast_engine.py  broadcast_worker.py  budget_api.py  calendar_widget.py  (+24 more)
(+64 files in other folders)
