[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botfactory-runtime"
version = "0.1.0"
description = "Bot Factory Runtime Service"
authors = [{name = "Bot Factory Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiogram>=3.6",
    "sqlalchemy>=2",
    "psycopg[binary,pool]",
    "redis",
    "pydantic-settings",
    "alembic",
    "httpx",
    "prometheus-client",
    "pytest",
    "pytest-asyncio",
    "structlog"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88